--- a/responsives/sass/components/template_a.scss
+++ b/responsives/sass/components/template_a.scss
@@ -1,6 +1,6 @@
 /*   template a   */
 
-$borders: true;
+$borders: false; 
 
 body {
 	@if $borders {border: 1px solid blue;} 
@@ -30,7 +30,7 @@ body {
 	background-color: blue;
 	color: #fff;		
 }
-#content {
+#main-content {
 	@if $borders {border: 1px solid yellow}
 }
 #sidebar-right {
@@ -53,7 +53,7 @@ body {
 			}
 		}
 	}
-	#content {
+	#main-content {
 		margin-left: 20px;
 		margin-right: 20px;
 	}
@@ -62,6 +62,10 @@ body {
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 992) { 
 
+}
+/*  768px and up */
+@media (min-width: 768px) { 
+	
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -75,10 +79,11 @@ body {
 				padding: 10px;
 				text-align: center;	
 				height: 50px;
+				border: 3px solid #fff;
 			}
 		}
 	}
-	#content {	
+	#main-content {	
 		margin-left: 150px;
 		margin-right: 150px;
 		padding-left: 50px;	
